<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header"
            android:layout_margin="16dp"
            android:textAppearance="@style/Theme.DailyVita.Headline"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textStyle="bold"
            android:textAppearance="@style/Theme.DailyVita.TitleMedium"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_header" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_get_started"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/onboarding_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_get_started" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/Theme.DailyVita.Button"
            android:text="@string/btn_get_started"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>